dev:添加商品规格