@@ -5,12 +5,13 @@ import com.tencent.wxcloudrun.dao.StoreMapper;
 import com.tencent.wxcloudrun.model.StoreDto;
 import com.tencent.wxcloudrun.service.StoreService;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class StoreServiceImpl extends ServiceImpl<StoreMapper, StoreDto> implements StoreService {
 
     @Override
     public List<StoreDto> listAllByName(String name) {
-        return List.of();
+        return Arrays.asList();
     }
 }
